<resources>
    <string name="app_name">inz</string>
    <string name="loading_exercises">Loading exercises…</string>
    <string name="all_exercises">All exercises</string>
    <string name="recommended_exercises">Recommended exercises</string>
    <string name="duration">Duration</string>
    <string name="volume">Volume</string>
    <string name="sets">Sets</string>
    <string name="loading_data">Loading data…</string>
    <string name="workout_name_hint">Workout Name</string>
    <string name="workout_name_title">Enter Workout Name</string>
    <string name="default_workout_name">New Workout</string>
    <string name="add_exercise">Add exercise</string>
</resources>