<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral10"
    android:orientation="vertical"
    tools:context=".views.fragments.ExerciseListFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:iconifiedByDefault="false"
        android:queryHint="Search exercises"
        android:theme="@style/CustomSearchViewStyle">

    </androidx.appcompat.widget.SearchView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/recommended_exercises"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/loadingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_exercises"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommendedExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/all_exercises"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>