<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.inz.viewmodels.WorkoutDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_neutral10"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- First Row: Workout Name and Start Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailsWorkoutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModel.workout.name}"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detailsStartTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:alpha="0.8"
                android:gravity="center_vertical"
                android:text='@{viewModel.formattedStartTime}'
                android:textAlignment="viewEnd"
                android:textColor="@color/white" />

        </LinearLayout>

        <!-- Second Row: Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volume"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sets"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Third Row: Data -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detailsDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text='@{viewModel.formattedDuration}'
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/detailsVolume"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text='@{viewModel.formattedVolume}'
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/detailsSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text='@{Integer.toString(viewModel.workout.sets)}'
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <!-- ScrollView for Exercises -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/exercisesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>
</layout>
